<resources>
    <string name="app_name">Raumkontrollapp_H</string>
    <string name="title_activity_raum">RaumActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="ausstattung_hinzu_fragment_label">First Fragment</string>
    <string name="ausstattungs_detail_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="TextView_Raumnummer">Raumnummer: &#032;&#032;  </string>
    <string name="textView_Ausstattung">Ausstattung</string>
    <string name="textView_Stuehle">Stühle</string>
    <string name="editTextNumber_AnzahlStuehle">3</string>
    <string name="textView_Tische">Tische</string>
    <string name="editTextNumber_AnzahlTische">4</string>
    <string name="imageButton_AusstattungHinzufuegen"></string>
    <string name="textView_Eigenschaften">Eigenschaften</string>
    <string name="fab_AusstattungHinzufuegen"></string>
    <string name="textView_Zimmergroesse">Zimmergröße</string>
    <string name="textView_ZimmergroesseZahl"> </string>
    <string name="textView_RaumnummerZahl"> </string>
    <string name="bearbeiten">Bearbeiten</string>
    <string name="geben_sie_bitte_die_raumnummer_ein_und_dr_cken_sie_unten_um_die_raumeigenschaften_zu_bearbeiten">Geben Sie bitte die Raumnummer ein und drücken sie unten um die Raumeigenschaften zu bearbeiten!</string>
    <string name="textview">TextView</string>
    <string name="Ausstattungen_listView"></string>
    <string name="editText_NeuerRaum_Eigenschaft">Fläche in m²</string>
    <string name="textView_NeuerRaum_Zimmergroesse">Geben Sie hierfür die ungefähre Fläche des Zimmers ein.</string>
    <string name="button_NeuerRaum_Raumhinzufuegen">Hinzufügen</string>
    <string name="button_NeuerRaum_Raumhinzufuegen_abbrechen">Abbrechen</string>
    <string name="button_popuptest">Popuptest</string>
    <string name="textView_NeuerRaum_Einleitung">Dieser Raum existiert nicht. Möchtest du einen neuen erstellen?</string>
    <string name="editTextNumber_counter">Stückzahl eingeben</string>
    <string name="editText_Kommentar"></string>








</resources>