<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/popupLayout">



    <TextView
        android:id="@+id/textView_NeuerRaum_Einleitung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="300dp"
        android:gravity="center"
        android:text="@string/textView_NeuerRaum_Einleitung"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView_NeuerRaum_Zimmergroesse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="150dp"
        android:gravity="center"
        android:text="@string/textView_NeuerRaum_Zimmergroesse"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/editText_NeuerRaum_Eigenschaft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:hint="@string/editText_NeuerRaum_Eigenschaft"
        android:textSize="25dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button_NeuerRaum_Raumhinzufuegen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="250dp"
        android:text="@string/button_NeuerRaum_Raumhinzufuegen"
        android:textSize="13dp" />

    <Button
        android:id="@+id/button_NeuerRaum_Raumhinzufuegen_abbrechen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="250dp"
        android:layout_marginRight="140dp"
        android:text="@string/button_NeuerRaum_Raumhinzufuegen_abbrechen"
        android:textSize="13dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>